syntax = "proto2";

package nfs;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/clients/nfs/config";

////////////////////////////////////////////////////////////////////////////////

message Zone {
    repeated string Endpoints = 1;
}

message ClientConfig {
    map<string, Zone> Zones = 1;
    optional string RootCertsFile = 2;
    optional bool Insecure = 3;
    optional bool DisableAuthentication = 4;
}
